# Soke

./: .gitignore  ChangeLog.gs  help.txt  run_main.bat
MD/: Discord Verification Bot Setup.md  Security_Bot.md
Resource/: ChangeLog.gs  GoogleSheet.md  Key  project-manager-88467-50206ef33cb0.json  run_mcp_discord.bat
Test/: assign_unverified_role.py  automate_move_and_secure.py  bot_access_secure.py  check_bot.py  check_massage.py  check_migration_status.py  check_moved_perms.py  check_new_chan.py  check_notion.py  check_system_cat.py  create_log_channel.py  debug_all_overwrites.py  debug_channels.py  debug_messages.py  discord_cli.py  discord_utils.py  final_move.py  (+29 more)
core/ai_support_bot/: .env.example  .gitignore  Dockerfile  HOW_TO_GET_IDS.md  NOTION_SAMPLE_DATA.md  PROBLEMS.md  README.md  TESTING_GUIDE.md  __init__.py  __main__.py  config.py  debug_logger.py  docker-compose.yml  pyproject.toml  run.bat  search_output.txt  test_bot_simple.py  test_notion_quick.py  test_rag.py  verify_rag.py
core/ai_support_bot/ai/: __init__.py  embedding.py  gemini.py.bak  openrouter.py
core/ai_support_bot/audit_logging/: __init__.py  audit.py
core/ai_support_bot/bot/: __init__.py  client.py  commands.py
core/ai_support_bot/cache/: __init__.py  memory_cache.py
core/ai_support_bot/rag/: chunker.py  ingestion.py  notion_fetcher.py  retriever.py  sheets_fetcher.py  vector_store.py
core/ai_support_bot/security/: __init__.py  rate_limiter.py  sanitizer.py
core/ai_support_bot/tests/: test_notion.py  test_notion_search.py  test_sheets_quick.py  verify_notion_blocks.py
(+40 files in other folders)
